--- a/actix_sqlite/Cargo.toml
+++ b/actix_sqlite/Cargo.toml
@@ -8,4 +8,9 @@ edition = "2021"
 [dependencies]
 actix-web = "4.5.1"
 env_logger = "0.11.3"
+futures-util = "0.3.30"
 log = "0.4.21"
+r2d2 = "0.8.10"
+r2d2_sqlite = "0.24.0"
+rusqlite = "0.31.0"
+serde = { version = "1.0.197", features = ["derive"] }
